fix z-index

--- a/src/app/easter-countdown/easter-countdown.component.scss
+++ b/src/app/easter-countdown/easter-countdown.component.scss
@@ -103,7 +103,7 @@ h1, h2, h3, h4, h5 {
     background: #fff;
 	content: '';
 	position: absolute;
-	z-indeX: -1;
+	z-index: -1;
 }
 
 .cloud:after {
